# inspect-coco

./: .env.example  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  404.html  CITATION.cff  COCO.md  LICENSE  NOTICE  README.md  Taskfile.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.cortex-plugin/: plugin.json
.github/workflows/: docs.yml  lint.yml  sandbox-image.yml
api/: index.html
api/agents/: index.html
api/config/: index.html
api/idd/: index.html
api/scorers/: index.html
api/suite/: index.html
api/tasks/: index.html
architecture/: index.html
cli/: index.html
docs/: architecture.md  cli.md  getting-started.md  idd-scoring.md  index.md  metrics.md  references.md  security.md  suite-yaml.md  task-toml.md  why-inspect-ai.md  writing-evals.md
docs/api/: agents.md  config.md  idd.md  index.md  scorers.md  suite.md  tasks.md
docs/stylesheets/: extra.css
examples/: README.md  suite.yaml
examples/custom-compose/: compose.yaml  instruction.md  task.py  task.toml
examples/hello-world/: task.py  (+2 more)
getting-started/: index.html
idd-scoring/: index.html
metrics/: index.html
references/: index.html
schemas/: suite.schema.json
search/: search_index.json
security/: index.html
suite-yaml/: index.html
task-toml/: index.html
tests/: conftest.py  test_agent.py  test_connection.py  test_idd_scorer.py  test_ignores.py  test_loader.py  test_oauth.py  test_pem.py  test_proxy_server.py  test_scaffold.py  test_scorer.py  test_suite.py  test_trajectory_parser.py
why-inspect-ai/: index.html
writing-evals/: index.html
(+66 files in other folders)
