[project]
name = "inspect-coco"
version = "0.1.0"
description = "Inspect AI evaluations for Cortex Code agents and skills"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Kamesh Sampath", email = "kamesh.sampath@snowflake.com" }]
readme = "README.md"
dependencies = [
    "click>=8.0",
    "inspect-ai>=0.3.100",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "toml>=0.10",
]

[project.scripts]
inspect-coco = "inspect_coco.cli:main"

[project.entry-points.inspect_ai]
inspect_coco = "inspect_coco._registry"

[project.urls]
Homepage = "https://github.com/kameshsampath/inspect-coco"
Repository = "https://github.com/kameshsampath/inspect-coco"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inspect_coco"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
extend-exclude = ["examples/fix-syntax-errors/starter"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["inspect_coco"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "docker: tests requiring Docker daemon (deselect with -m 'not docker')",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.11",
    "pyright>=1.1",
    "pre-commit>=4.0",
]
